# pyo3

./: .gitignore  Cargo.toml  pyproject.toml
src/: lib.rs  pyo3.pyi
test/: test_lib.py
