[package]
name = "rusting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusting"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.5"
#pyo3 = { git = "https://github.com/PyO3/pyo3", features = ["extension-module", "experimental-no-gil"] }

